--- a/local/gateway-deployment-local.yml
+++ b/local/gateway-deployment-local.yml
@@ -30,7 +30,7 @@ spec:
             - name: SPRING_CLOUD_CONFIG_URI
               value: "http://config-server:9999"
             - name: SPRING_REDIS_HOST
-              value: "redis-master-0"
+              value: "redis-master"
             - name: SPRING_REDIS_PORT
               value: "6379"
             - name: SPRING_REDIS_PASSWORD
