--- a/local/discovery-deployment-local.yml
+++ b/local/discovery-deployment-local.yml
@@ -71,54 +71,54 @@ spec:
     requests:
       storage: 100Mi
 ---
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: discovery-deployment-2
-  labels:
-    app: discovery-deployment-2
-spec:
-  selector:
-    matchLabels:
-      app: discovery-deployment-2
-  template:
-    metadata:
-      labels:
-        app: discovery-deployment-2
-    spec:
-      containers:
-        - name: discovery-service-2
-          image: com.backend.programming.learning.system/discovery.service:1.0-SNAPSHOT
-          resources:
-            limits:
-              cpu: "500m"
-              memory: "1024Mi"
-            requests:
-              cpu: "200m"
-              memory: "256Mi"
-          env:
-            - name: LOGGING_LEVEL_ROOT
-              value: "info"
-            - name: LOG_APP-NAME
-              value: "discovery-service-2"
-            - name: SPRING_PROFILES_ACTIVE
-              value: "peer2"
-            - name: EUREKA_INSTANCE_HOSTNAME
-              value: "discovery-service-2"
-      volumes:
-        - name: discovery-service-logs
-          hostPath:
-            path: ./discovery-service-logs
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: discovery-service-2
-spec:
-  selector:
-    app: discovery-deployment-2
-  ports:
-    - protocol: TCP
-      port: 8762
-      name: discovery-service-2-port
-  type: LoadBalancer
+#apiVersion: apps/v1
+#kind: Deployment
+#metadata:
+#  name: discovery-deployment-2
+#  labels:
+#    app: discovery-deployment-2
+#spec:
+#  selector:
+#    matchLabels:
+#      app: discovery-deployment-2
+#  template:
+#    metadata:
+#      labels:
+#        app: discovery-deployment-2
+#    spec:
+#      containers:
+#        - name: discovery-service-2
+#          image: com.backend.programming.learning.system/discovery.service:1.0-SNAPSHOT
+#          resources:
+#            limits:
+#              cpu: "500m"
+#              memory: "800Mi"
+#            requests:
+#              cpu: "200m"
+#              memory: "256Mi"
+#          env:
+#            - name: LOGGING_LEVEL_ROOT
+#              value: "info"
+#            - name: LOG_APP-NAME
+#              value: "discovery-service-2"
+#            - name: SPRING_PROFILES_ACTIVE
+#              value: "peer2"
+#            - name: EUREKA_INSTANCE_HOSTNAME
+#              value: "discovery-service-2"
+#      volumes:
+#        - name: discovery-service-logs
+#          hostPath:
+#            path: ./discovery-service-logs
+#---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: discovery-service-2
+#spec:
+#  selector:
+#    app: discovery-deployment-2
+#  ports:
+#    - protocol: TCP
+#      port: 8762
+#      name: discovery-service-2-port
+#  type: LoadBalancer
