--- a/local/gateway-deployment-local.yml
+++ b/local/gateway-deployment-local.yml
@@ -36,7 +36,7 @@ spec:
             - name: SPRING_REDIS_PASSWORD
               value: "admin"
             - name: EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE
-              value: "http://discovery-service-1:8761/eureka/,http://discovery-service-2:8762/eureka/"
+              value: "http://discovery-service-1:8761/eureka/"
           volumeMounts:
             - name: gateway-service-log
               mountPath: /workspace/gateway-service/logs
