--- a/local/zipkin.yml
+++ b/local/zipkin.yml
@@ -1,3 +1,68 @@
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: zipkin-mysql-deployment
+  namespace: default
+  labels:
+    app: zipkin-mysql-deployment
+spec:
+  selector:
+    matchLabels:
+      app: zipkin-mysql-deployment
+  template:
+    metadata:
+      labels:
+        app: zipkin-mysql-deployment
+    spec:
+      containers:
+        - name: zipkin-mysql
+          image: openzipkin/zipkin-mysql:2.22.2
+          env:
+            - name: MYSQL_USER
+              value: "zipkin"
+            - name: MYSQL_PASSWORD
+              value: "zipkin"
+            - name: MYSQL_DATABASE
+              value: "zipkin"
+          volumeMounts:
+            - name: mysql-data
+              mountPath: /var/lib/mysql
+      volumes:
+        - name: mysql-data
+          persistentVolumeClaim:
+            claimName: mysql-pvc
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pvc
+  namespace: default
+  labels:
+    app: mysql-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zipkin-mysql-service
+  namespace: default
+  labels:
+    app: zipkin-mysql-deployment
+spec:
+  selector:
+    app: zipkin-mysql-deployment
+  ports:
+    - name: zipkin-mysql-service-port
+      protocol: TCP
+      port: 3306
+  type: LoadBalancer
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,6 +80,11 @@ spec:
       labels:
         app: zipkin
     spec:
+      initContainers:
+        - name: wait-for-services
+          image: busybox
+          command: [ "/bin/sh","-c" ]
+          args: [ "until echo 'Waiting for zipkin-mysql-service...' && nc -vz -w 2 zipkin-mysql-service 3306; do echo 'Looping forever...'; sleep 2; done;" ]
       containers:
         - name: zipkin
           image: openzipkin/zipkin:2.22.2
