[BE] - feat: fix something

--- a/local/code-assessment-deployment-local.yml
+++ b/local/code-assessment-deployment-local.yml
@@ -35,12 +35,9 @@ spec:
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
               value: "http://local-confluent-kafka-cp-schema-registry:8081"
             - name: SPRING_CLOUD_CONFIG_URI
-              value: "http://config-service:9999"
+              value: "http://config-server:9999"
             - name: EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE
               value: "http://discovery-service-1:8761/eureka/"
-          volumeMounts:
-            - name: code-assessment-service-log
-              mountPath: /workspace/code-assessment-service/logs
           resources:
             limits:
               cpu: "500m"
@@ -48,10 +45,13 @@ spec:
             requests:
               cpu: "200m"
               memory: "256Mi"
+          volumeMounts:
+            - name: code-assessment-service-log
+              mountPath: /logs
       volumes:
         - name: code-assessment-service-log
           persistentVolumeClaim:
-            claimName: code-assessment-service-claim0
+            claimName: code-assessment-service-pvc
 ---
 apiVersion: v1
 kind: Service
@@ -69,17 +69,3 @@ spec:
       port: 8183
   type: LoadBalancer
   loadBalancerIP: ""
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: code-assessment-service-claim0
-  namespace: default
-  labels:
-    app: code-assessment-service-claim0
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
