--- a/local/auth-deployment-local.yml
+++ b/local/auth-deployment-local.yml
@@ -36,12 +36,9 @@ spec:
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
               value: "http://local-confluent-kafka-cp-schema-registry:8081"
             - name: SPRING_CLOUD_CONFIG_URI
-              value: "http://config-service:9999"
+              value: "http://config-server:9999"
             - name: EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE
               value: "http://discovery-service-1:8761/eureka/"
-          volumeMounts:
-            - name: auth-service-log
-              mountPath: /workspace/auth-service/logs
           resources:
             limits:
               cpu: "500m"
@@ -49,10 +46,13 @@ spec:
             requests:
               cpu: "200m"
               memory: "256Mi"
+          volumeMounts:
+            - name: auth-service-log
+              mountPath: /logs
       volumes:
         - name: auth-service-log
           persistentVolumeClaim:
-            claimName: auth-service-claim0
+            claimName: auth-service-pvc
 ---
 apiVersion: v1
 kind: Service
@@ -70,17 +70,17 @@ spec:
       port: 8182
   type: LoadBalancer
   loadBalancerIP: ""
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: auth-service-claim0
-  namespace: default
-  labels:
-    app: auth-service-claim0
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  name: auth-service-claim0
+#  namespace: default
+#  labels:
+#    app: auth-service-claim0
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  resources:
+#    requests:
+#      storage: 100Mi
