--- a/local/core-deployment-local.yml
+++ b/local/core-deployment-local.yml
@@ -36,12 +36,9 @@ spec:
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
               value: "http://local-confluent-kafka-cp-schema-registry:8081"
             - name: SPRING_CLOUD_CONFIG_URI
-              value: "http://config-service:9999"
+              value: "http://config-server:9999"
             - name: EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE
               value: "http://discovery-service-1:8761/eureka/"
-          volumeMounts:
-            - name: core-service-log
-              mountPath: /workspace/core-service/logs
           resources:
             limits:
               cpu: "500m"
@@ -49,10 +46,13 @@ spec:
             requests:
               cpu: "200m"
               memory: "256Mi"
+          volumeMounts:
+            - name: core-service-log
+              mountPath: /logs
       volumes:
         - name: core-service-log
           persistentVolumeClaim:
-            claimName: core-service-claim0
+            claimName: core-service-pvc
 ---
 apiVersion: v1
 kind: Service
@@ -70,17 +70,3 @@ spec:
       port: 8181
   type: LoadBalancer
   loadBalancerIP: ""
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: core-service-claim0
-  namespace: default
-  labels:
-    app: core-service-claim0
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
