--- a/local/auth-deployment-local.yml
+++ b/local/auth-deployment-local.yml
@@ -31,8 +31,12 @@ spec:
               value: "localdb"
             - name: KAFKA-CONFIG_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
+            - name: SPRING_ZIPKIN_SENDER_TYPE
+              value: "kafka"
             - name: SPRING_KAFKA_BOOTSTRAP-SERVERS
               value: "local-confluent-kafka-cp-kafka-headless:9092"
+            - name: SPRING_SLEUTH_SAMPLER_PROBABILITY
+              value: "1.0"
             - name: KAFKA-CONFIG_SCHEMA-REGISTRY-URL
               value: "http://local-confluent-kafka-cp-schema-registry:8081"
             - name: SPRING_CLOUD_CONFIG_URI
