--- a/local/gateway-deployment-local.yml
+++ b/local/gateway-deployment-local.yml
@@ -37,6 +37,12 @@ spec:
               value: "admin"
             - name: EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE
               value: "http://discovery-service-1:8761/eureka/"
+            - name: SPRING_ZIPKIN_SENDER_TYPE
+              value: "kafka"
+            - name: SPRING_KAFKA_BOOTSTRAP-SERVERS
+              value: "local-confluent-kafka-cp-kafka-headless:9092"
+            - name: SPRING_SLEUTH_SAMPLER_PROBABILITY
+              value: "1.0"
           volumeMounts:
             - name: gateway-service-log
               mountPath: /logs
